Viewer3D: bug fixes and elimination of unneeded  overhead
- Fix annotation removal by object to remove from plottedAnnotations
- Fix mergeAnnotations to remove originals from the backing store
- Fix UpdatableListModel.fireIntervalRemoved to fire the correct event
- Guard duplicate(), guiUtils(), remove(Object), and file import entrypoint against NPE
- Move batch-import confirmation dialog execution to EDT
- Optimize removeAllTrees() / removeAllMeshes()
- Remove per-call temp-map allocations in sceneIsOK()
- Speed subset tree operations by pre-hashing label collections
- Use value equality for dark-mode background color check